# Fund_analyzer

./: .gitignore  EXPLICATIONS_INDICATEURS.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: .gitkeep
pages/: 1_Score_Composite.py
utils/: __init__.py  charts.py  data_loader.py  indicators.py
