[tool.poetry]
name = "fund-analyzer"
version = "1.0.0"
description = "Dashboard Streamlit pour l'analyse de fonds Large Cap"
authors = ["Equipe Investissement"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.18.0"
scipy = "^1.11.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.0"
yfinance = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
