[tool.poetry]
name = "fund-analyzer"
version = "2.0.0"
description = "Dashboard d'analyse de fonds Large Cap"
authors = ["Nini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
plotly = "^5.18.0"
scipy = "^1.11.0"
openpyxl = "^3.1.0"
xlrd = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
